i think i fixed the saving problem except for company